# seafile-client

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  Info.plist  LICENSE  README.md  appcast.example.xml  changelog.md  coding-style.md  dev-guide.md  genapp.sh  qt-linux.css  qt-mac.css  qt-win.css  qt.css  resource.h  seafile-applet.rc  seafile-applet.rc.in  seafile-client.pro  seafile-client.qrc  seafile-client.rc  seafile-client.sln  seafile-client.vcxproj  seafile-client.vcxproj.filters  seafile.icns  sparkle-readme.md  vcpkg.json
.tx/: config
assets/: commit_details.html
data/: com.seafile.seafile-applet.desktop  seafile.desktop
debian/: changelog  control  copyright  rules  seafile-gui.install
extensions/: CMakeLists.txt  Makefile  README.md  README.org  applet-connection.cpp  applet-connection.h  build.sh  class-factory.cpp  class-factory.h  commands.cpp  commands.h  context-menu.cpp  debug-register.reg  debug-unregister.reg  dll.cpp  ext-common.h  ext-utils.cpp  ext-utils.h  ext.cpp  guids.h  i18n.cpp  i18n.h  icon-overlay.cpp  log.cpp  log.h  seafile_shell_ext.def  seafile_shell_ext.rc  shell-ext.cpp  shell-ext.h
fsplugin/: .clang-format  CMakeLists.txt  FinderSync.h  FinderSync.mm  FinderSyncClient.h  FinderSyncClient.mm  Info.plist  build.sh  seafile-fsplugin.entitlements  status-done.icns  status-error.icns  status-ignored.icns  status-locked-by-me.icns  status-locked.icns  status-syncing.icns
fsplugin/.tx/: config
fsplugin/bg_BG.lproj/: Localizable.strings
fsplugin/cs_CZ.lproj/: Localizable.strings
fsplugin/de_DE.lproj/: Localizable.strings
fsplugin/el_GR.lproj/: Localizable.strings
fsplugin/en.lproj/: Localizable.strings
fsplugin/es.lproj/: Localizable.strings
fsplugin/es_AR.lproj/: Localizable.strings
fsplugin/es_MX.lproj/: Localizable.strings
fsplugin/fr_FR.lproj/: Localizable.strings
fsplugin/hu_HU.lproj/: Localizable.strings
fsplugin/is.lproj/: Localizable.strings
fsplugin/it.lproj/: Localizable.strings
fsplugin/ja.lproj/: Localizable.strings
fsplugin/ko_KR.lproj/: Localizable.strings
fsplugin/lv.lproj/: Localizable.strings
fsplugin/nb_NO.lproj/: Localizable.strings
fsplugin/nl_BE.lproj/: Localizable.strings
fsplugin/pl_PL.lproj/: Localizable.strings
fsplugin/pt_BR.lproj/: Localizable.strings
fsplugin/ru.lproj/: Localizable.strings
fsplugin/sk_SK.lproj/: Localizable.strings
fsplugin/sv.lproj/: Localizable.strings
fsplugin/tr.lproj/: Localizable.strings
fsplugin/zh_CN.lproj/: Localizable.strings
fsplugin/zh_TW.lproj/: Localizable.strings
i18n/: seafile_DE.ts  seafile_ar.ts  seafile_ar_SA.ts  seafile_bg_BG.ts  seafile_ca.ts  seafile_cs_CZ.ts  seafile_de.ts  seafile_de_DE.ts  seafile_el_GR.ts  seafile_en.ts  seafile_es.ts  seafile_es_AR.ts  seafile_es_MX.ts  seafile_et_EE.ts  seafile_fr_FR.ts  seafile_he_IL.ts  seafile_hu_HU.ts  seafile_id.ts  seafile_is.ts  seafile_it.ts  seafile_ja.ts  seafile_ko_KR.ts  seafile_lv.ts  seafile_nb_NO.ts  seafile_nl_BE.ts  seafile_nl_NL.ts  seafile_pl_PL.ts  seafile_pt_BR.ts  seafile_pt_PT.ts  seafile_ru.ts  seafile_sk_SK.ts  seafile_sv.ts  seafile_tr.ts  seafile_uk.ts  seafile_zh_CN.ts  seafile_zh_TW.ts
nautilus-seafile/: CMakeLists.txt  README.md  build.sh  import-png.py  nautilus-seafile.c  nautilus-seafile.h  seafile-module.c  seafile-rpc-client.c  seafile-rpc-client.h
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
registry-clean/: CMakeLists.txt  build.sh
registry-clean/resources/: Application.manifest  seafile.rc
registry-clean/src/: main.cpp  registry.cpp  registry.h
scripts/: build.py  build_breakpad.sh  build_helper.py  ci-build.sh  dmp2minidump.py  genapp.sh  generate_breakpad_symbols.py  install-deps-linux.sh  install-deps-osx.sh  stable.xml.sample  strip-png.sh  update-i18n.sh
seafile-client.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
src/: account-info-service.cpp  account-info-service.h  account-mgr.cpp  account-mgr.h  account.cpp  account.h  api-client.cpp  api-client.h  api-request.cpp  api-request.h  application.cpp  application.h  auto-login-service.cpp  auto-login-service.h  auto-update-service.cpp  auto-update-service.h  avatar-service.cpp  avatar-service.h  ccnet-init.cpp  ccnet-init.h  certs-mgr.cpp  certs-mgr.h  configurator.cpp  configurator.h  crash-handler.cpp  crash-handler.h  customization-service.cpp  customization-service.h  daemon-mgr.cpp  daemon-mgr.h  events-service.cpp  events-service.h  ext-handler.cpp  ext-handler.h  i18n.cpp  i18n.h  log-uploader.cpp  log-uploader.h  mac-sparkle-support.h  mac-sparkle-support.mm  (+42 more)
src/api/: api-client.cpp  api-client.h  api-error.cpp  api-error.h  api-request.cpp  api-request.h  commit-details.cpp  commit-details.h  contact-share-info.cpp  contact-share-info.h  event.cpp  event.h  list-repos-request.cpp  list-repos-request.h  login-request.cpp  login-request.h  requests.cpp  requests.h  seaf-repo.cpp  seaf-repo.h  server-info.h  server-repo.cpp  server-repo.h  sso-status.h  starred-file.cpp  starred-file.h
src/filebrowser/: advanced-sharedlink-dialog.cpp  advanced-sharedlink-dialog.h  auto-update-mgr.cpp  auto-update-mgr.h  data-cache.cpp  (+47 more)
tests/: test_file-utils.cpp  test_file-utils.h  test_server-info.cpp  test_server-info.h  test_stl.cpp  test_stl.h  test_utils.cpp  test_utils.h  utils.cpp
ui/: about-dialog.ui  account-item.ui  account-settings-dialog.ui  account-view.ui  accounts-view.ui  clone-tasks-dialog.ui  cloud-view.ui  create-repo-dialog.ui  create-repo.ui  download-repo-dialog.ui  get-account-repos-dialog.ui  init-seafile-dialog.ui  init-vdrive-dialog.ui  list-account-repos-dialog.ui  login-dialog.ui  private-share-dialog.ui  repo-detail-dialog.ui  repo-details-view.ui  repo-item.ui  repos-view.ui  server-repo-item.ui  server-repos-view.ui  server-status-dialog.ui  set-repo-password-dialog.ui  settings-dialog.ui  ssl-confirm-dialog.ui  sso-dialog.ui  switch-account-dialog.ui  sync-errors-dialog.ui  sync-repo.ui  two-factor-dialog.ui  uninstall-helper-dialog.ui  welcome-dialog.ui
(+217 files in other folders)
